# UniQ

./: .gitmodules  CMakeLists.txt  Makefile  README.md  main.cpp
artifact-evaluation/: bind.sh  check_wrapper.sh  compile.sh  dm-cpu.sh  err-strong-gpu.sh  parse_profile.py  pure-strong-gpu-nvprof.sh  pure-strong-gpu.sh  sv-breakdown-cpu.sh  sv-strong-cpu.sh  sv-strong-gpu.sh
benchmark/: bench_backend.sh  bench_blas_a100.sh  bench_blas_v100.sh  bench_comm.sh  bench_evaluator_a100.sh  bench_evaluator_v100.sh  bench_groupsz.sh  bench_numgate.sh  bench_pergate.sh  bench_scale.sh  bench_sharemem.sh  bench_weak.sh  preprocess.sh
benchmark_sc/: cpu-breakdown.sh  cpu-scaling.sh  density-pure-v100-parse.py  density-pure-v100.sh  err-strong-gpu-nccl.sh  err-strong-gpu.sh  err-weak-gpu-nccl.sh  pure-strong-gpu.sh  pure-weak-gpu.sh  sv-strong-gpu-nccl.sh  sv-strong-gpu.sh  sv-weak-gpu-nccl.sh
benchmark_sc/qiskit/: dm-err.py  dm-pure.py  err-cpu-omp.py  run-cpu-mpi.sh  run-cpu-omp.sh  sv-cpu-mpi.py  sv-cpu-omp.py  sv-gpu-single.py
evaluator-preprocess/: process.cpp
scripts/: check-cpu.sh  check-dm-cpu.sh  check-dm-gpu.sh  check-pure-cpu.sh  check.sh  check_wrapper.sh  coalescing.sh  env.sh  gen_stdout.sh  gpu-bind.sh  init.sh  run-cpu.sh  run-density-pure.sh  run-dm-cpu.sh  run-dm-gpu.sh  run-inplace.sh  run-multi-GPU.sh  run-multi-node.sh  run-single.sh  run.sh
src/: CMakeLists.txt  circuit.cpp  circuit.h  compiler.cpp  compiler.h  dm_executor.cpp  dm_executor.h  evaluator.cpp  evaluator.h  executor.cpp  executor.h  gate.cpp  gate.h  kernel.h  kernelSimple.cu  logger.h  schedule.cpp  schedule.h  utils.cpp  utils.h
src/cpu/: cpu_dm_executor.cpp  cpu_dm_executor.h  cpu_executor.cpp  cpu_executor.h  entry.h  header.h  helper.cpp
src/cuda/: cuda_dm_executor.cpp  cuda_dm_executor.h  cuda_executor.cpp  cuda_executor.h  entry.h  helper.cpp  init.cpp  kernel.h  kernelDM.cu  kernelOpt.cu  kernelSimple.cu  kernelUtils.cu  profiler.cpp
src/kernels/: baseline.cu  lookup.cu  swizzle.cu
