project(QCSimulator)
aux_source_directory(. SRC_CXX)
MESSAGE(STATUS "src list: ${SRC_CXX}")

if (HARDWARE STREQUAL "gpu")
    aux_source_directory(./cuda SRC_CUDA)
    MESSAGE(STATUS "cuda code list: ${SRC_CUDA}")
    cuda_add_library(QCSimulator ${SRC_CXX} ${SRC_CUDA})
elseif(HARDWARE STREQUAL "cpu")
    aux_source_directory(./cpu SRC_CPU)
    MESSAGE(STATUS "cpu code list: ${SRC_CPU}")
    add_library(QCSimulator ${SRC_CXX} ${SRC_CPU})
else()
    MESSAGE(FATAL_ERROR "Please specify the hardware")
endif()